name:                wikipath
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Nick Spinale
maintainer:          spinalen@carleton.edu
build-type:          Simple
cabal-version:       >=1.10

executable wikipath
  main-is:             WikiPath.hs
  other-extensions:    OverloadedStrings
  build-depends:         base
                       , bytestring
                       , containers
                       , async
                       , lens
                       , wreq
                       , taggy-lens
                       , stm
  default-language:    Haskell2010
